# BetrCache

./: .gitignore  Cargo.toml  LICENSE  README.md  evaluation.py  judge1.csv  main.py  plots.py  requirements.txt  test.py
docker/: Dockerfile  docker-compose.yml
src/: ann_index.py  ann_index.rs  api.py  api.rs  cache.py  cache.rs  cache_client.py  cache_client.rs  config.py  custom_types.py  dataset.py  index.rs  judge.py  main.rs  similarity.py  similarity.rs  types.rs  utils.py  utils.rs
