[package]
name = "betr-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
hnsw_rs = "0.3.1"
redis = "0.29.1"
serde = "1.0.219"
serde_json = "1.0.140"
dotenv = "0.15"
tokio = {version = "1.44.1", features = ["full"]}
reqwest = { version = "0.12.15", features = ["json"] }
dotenvy = "0.15.7"
lazy_static = "1.5.0"

